data/derived/sp14/progs/unify/prog1070.ml.out
Characters 111-124:
  | Sine(p1) -> sin(pi *. evalhelper p1)
                          ^^^^^^^^^^^^^
Error: This expression has type 'a -> 'a -> 'a
       but an expression was expected of type float
